@@ -150,6 +150,29 @@ Site Name
 This is the human-readable name of your Wagtail install which welcomes users upon login to the Wagtail admin.
 
 
+.. _append_slash:
+
+Append Slash
+------------
+
+.. code-block:: python
+
+  # Don't add a trailing slash to Wagtail-served URLs
+  WAGTAIL_APPEND_SLASH = False
+
+Similar to Django's ``APPEND_SLASH``, this setting controls how Wagtail will handle requests that don't end in a trailing slash.
+
+When ``WAGTAIL_APPEND_SLASH`` is ``True`` (default), requests to Wagtail pages which omit a trailing slash will be redirected by Django's `CommonMiddleware`_ to a URL with a trailing slash.
+
+When ``WAGTAIL_APPEND_SLASH`` is ``False``, requests to Wagtail pages will be served both with and without trailing slashes. Page links generated by Wagtail, however, will not include trailing slashes.
+
+.. note::
+
+  If you use the ``False`` setting, keep in mind that serving your pages both with and without slashes may affect search engines' ability to index your site. See `this Google Webmaster Blog post`_ for more details.
+
+.. _commonmiddleware: https://docs.djangoproject.com/en/dev/ref/middleware/#module-django.middleware.common
+.. _this Google Webmaster Blog post: https://webmasters.googleblog.com/2010/04/to-slash-or-not-to-slash.html
+
 Search
 ------
 
